@@ -13,6 +13,7 @@ https://github.com/elastic/beats/compare/v6.0.0-beta2...master[Check the HEAD di
 ==== Breaking changes
 
 *Affecting all Beats*
+- Fix kubernetes matcher registry lookup. {pull}5159[5159]
 
 *Auditbeat*
 
